syntax = "proto3";

package oceanstars.ecm.protobuf;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "oceanstars/protobuf/cqrs.proto";
import "google/protobuf/descriptor.proto";

option java_multiple_files = true;
option java_package = "oceanstars.ecommerce.ecm.api.rpc.v1.dto.content";

// 内容实体
message EcmContent {
  // 内容名称
  string name = 1;
  // 内容类型
  int32 type = 2;
  // 内容展示名称
  string display_name = 3;
  // 内容描述
  string description = 4;
  // 内容标签
  repeated int64 tags = 5;
  // 内容分类
  repeated int64 categories = 6;
  // 内容原生信息（不同内容类型属性差异）
  google.protobuf.Any raw_data = 7;
}

// 内容原生信息 - 菜单
message EcmContentMenu {
  // 菜单类型
  int32 type = 1;
  // 菜单对应的功能ID
  int64 func = 2;
  // 菜单动作：点击菜单后的执行脚本
  string action = 3;
  // 菜单图标
  string icon = 4;
  // 菜单隶属
  int64 parent = 5;
  // 菜单是否可见
  bool visible = 6;
}

// 创建内容命令实体
message EcmCreateContentCommand {
  // 内容名称
  string name = 1;
  // 内容类型
  int32 type = 2;
  // 内容展示名称
  string display_name = 3;
  // 内容描述
  string description = 4;
  // 内容标签
  repeated int64 tags = 5;
  // 内容分类
  repeated int64 categories = 6;
  // 内容原生信息（不同内容类型属性差异）
  google.protobuf.Any raw_data = 7;
}

// 创建内容返回结果实体
message EcmCreateContentResult {
  // 内容代理唯一识别符（物理主键）
  int64 id = 1;
}